--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>SAP Customer Identity Web SDK Sample</title>
 <meta name="viewport" content="width=device-width">
-<SCRIPT type="text/javascript" lang="javascript" src="https://cdns.eu1.gigya.com/js/gigya.js?apikey=API_KEY"></SCRIPT>
+<SCRIPT type="text/javascript" lang="javascript" src="https://cdns.eu1.gigya.com/js/gigya.js?apikey=4_D7_99kXQv1bG1Q74mLaPIw"></SCRIPT>
 <SCRIPT type="text/javascript" lang="javascript">
 	var onGigyaServiceReady = function () {
 		gigya.socialize.addEventHandlers({
